<resources>
    <string name="app_name">Una</string>

    <string name="text_explore">Explore</string>

    <string name="lowercase_app_name">una</string>
    <string name="text_home">Home</string>

    <string name="text_quick_donate">Frequent</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_impact">Challenges</string>

    <string name="text_donate_quickly">Donate Quickly!</string>

    <string name="text_search_view">Search</string>
    <string name="text_home_featured">Featured</string>
    <string name="text_home_recommended">Recommended for You</string>
    <string name="text_home_explore">Explore</string>
    <string name="challenge_description_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In molestie, tellus sollicitudin eleifend mollis, sapien mi gravida arcu, nec dapibus.</string>

    <string name="featured_list_id">15</string>
    <string name="recommended_list_id">18</string>

    <string name="text_survey_complete_profile">Complete Your Profile</string>
    <string name="text_survey_complete_profile_info">Your account information is private and is not shared with nonprofits.</string>
    <string name="text_survey_first_name">First Name</string>
    <string name="text_survey_last_name">Last Name</string>
    <string name="text_survey_cb_human_services">Human Services</string>
    <string name="text_survey_first_name_hint">Mark</string>
    <string name="text_survey_last_name_hint">Zuckerberg</string>
    <string name="text_survey_cause_areas">Cause Areas</string>
    <string name="text_survey_cb_education">Education</string>
    <string name="text_survey_cb_international">International</string>
    <string name="text_survey_cb_rights">Human and Civil Rights</string>
    <string name="text_survey_cb_religion">Religion</string>
    <string name="text_survey_cb_animals">Animals</string>
    <string name="text_survey_cb_arts">Arts, Culture, Humanities</string>
    <string name="text_survey_cb_environment">Environment</string>
    <string name="text_survey_cb_health">Health</string>
    <string name="text_survey_cb_community">Community Development</string>
    <string name="text_survey_cb_research">Research and Public Policy</string>
    <string name="text_survey_btn_submit">Submit</string>
    <string name="text_survey_cause_areas_info">Select the cause areas that interest you. We use this information to help you discover nonprofits.</string>

    <string name="donate_value_prompt">How much would you like to donate?</string>
    <string name="donate_charity_correct_prompt">Is this the correct charity?</string>
    <string name="donate_value_accept">Ok</string>
    <string name="donate_submit">Make an Impact</string>

    <string name="donation_success">Donation Success!</string>
    <string name="donation_no_input">Please input a donation amount.</string>
    <string name="donation_hint">$0.00</string>
    <string name="red_cross_ein">530196605</string>

    <string name="about_us_msg">About</string>
    <string name="for_more_info_charity_msg">For more info, please visit our link below!</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_profile">Profile Settings</string>
    <string name="navigation_drawer_donation_history">Donation History</string>
    <string name="navigation_drawer_header">My Name</string>
    <string name="navigation_drawer_impact">Your Impact</string>


    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="join">Join</string>
    <string name="donated">Donated</string>
    <string name="joined">Joined</string>

    <string name="donation_item_you_donated">You Donated: </string>
    <string name="donation_item_timestamp">On: </string>

    <string name="user_login_prompt">user login</string>
    <string name="charity_login_prompt">charity login</string>

    <string name="charity_signup_explanation">Sign up</string>
    <string name="charity_login_explanation">Log in</string>
    <string name="your_charity_ein">Charity EIN</string>
    <string name="your_charity_name">Charity Name</string>
    <string name="your_password">Password</string>
    <string name="your_charity_email">Organization Email</string>

    <string name="preference_file_key">com.example.una.PREFERENCE_FILE_KEY</string>
    <string name="amount">Amount</string>
    <string name="_5">$5</string>
    <string name="_10">$10</string>
    <string name="_20">$20</string>
    <string name="_50">$50</string>
    <string name="_100">$100</string>
    <string name="other_amount">$ Other</string>
    <string name="who_can_see_that_you_donated">Who can see that you donated?</string>

    <string name="notification_item_donated_to">donated to:</string>
    <string name="notification_item_donated_on">Donated on:</string>

    <string name="broadcast_message_prompt">What do you want to share?</string>
    <string name="post_button_text">post</string>

    <string name="firestore_charity_ein_field">charity_ein</string>
    <string name="firestore_charity_name_field">charity_name</string>
    <string name="firestore_broadcast_message_field">message</string>
    <string name="broadcast_message_hint">Message Body</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="fundraiser_for">Fundraiser for</string>
    <string name="charity_ein">Charity EIN</string>
    <string name="goal">Goal</string>
    <string name="hint_amount">$ Amount</string>
    <string name="end_date">End Date</string>
    <string name="is_this_a_recurring_challenge">Is this a recurring challenge?</string>
    <string name="will_gifts_be_matched">Will gifts be matched?</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="one_time">one-time</string>
    <string name="daily">daily</string>
    <string name="weekly">weekly</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="tell_your_story">Tell Your Story</string>
    <string name="give_your_challenge_a_title">Give your challenge a title</string>
    <string name="title">Title</string>
    <string name="create_challenge_description_prompt">Let people know why you\'re creating this challenge and why they should join! We encourage you to include information on where exactly their money will be going.</string>
    <string name="pick_a_cover_photo">Pick a cover photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="library">Library</string>
    <string name="create">Create</string>

    <string name="sign_out">Sign Out</string>

    <string name="quick_donate_description">Instead of drinking coffee this morning, decide to donate to your favorite charity. A little bit goes a long way :) We gave you a default charity to start, but feel free to set a new one!</string>
    <string name="quick_donate_stats_title">Your Stats</string>

    <string name="quick_donate_donation_sheet_title">Give Today</string>
    <string name="quick_donate_donation_button">Give</string>

    <string name="radio_one_quick_donate_item">Ramen</string>
    <string name="radio_three_quick_donate_item">Coffee</string>
    <string name="radio_five_quick_donate_item">Gelato</string>
    <string name="radio_ten_quick_donate_item">Sushi</string>
    <string name="radio_tuition_quick_donate_item">Tuition</string>

    <string name="quick_donate_times_donated">Times Donated</string>
    <string name="quick_donate_amount_donated">Amount Donated</string>
    <string name="quick_donate_num_challenges">Challenges Created</string>

    <string name="add_a_comment">Add a comment...</string>
    <string name="comment">Comment</string>
    <string name="charity_broadcasts_title">Posts</string>
    <string name="charity_challenge_page_name">Challenges</string>
    <string name="donate_the_equivalent_of">Donate the equivalent of:</string>

    <string name="base_image_file_path">images/</string>

    <string name="default_charity_json_string"><![CDATA[
        {
          \"ein\": \"411867244\",
          \"orgID\": 9037,
          \"charityName\": \"Home for Life\",
          \"tagLine\": \"Loving care, a place to belong, a home for life\",
          \"irsClassification\": {
            \"subsection\": \"501©(3)\",
            \"foundationStatus\": \"Organization which receives a substantial part of its support from a governmental unit or the general public   170(b)(1)(A)(vi)\",
            \"deductibility\": \"Deductible\"
          },
          \"websiteURL\": \"http://www.homeforlife.org/\",
          \"charityNavigatorURL\": \"https://www.charitynavigator.org/index.cfm?bay=search.summary&orgid=9037\",
          \"category\": {
            \"categoryID\": \"1\",
            \"categoryName\": \"Animals\",
            \"image\": \"https://d20umu42aunjpx.cloudfront.net/_gfx_/icons/categories/animals.png\",
            \"charityNavigatorURL\": \"https://www.charitynavigator.org/index.cfm?bay=search.results.&cgid=1\"
          },
          \"cause\": {
            \"causeID\": \"2\",
            \"causeName\": \"Animal Rights, Welfare, and Services\",
            \"image\": \"https://d20umu42aunjpx.cloudfront.net/_gfx_/causes/small/animal_rights.gif\",
            \"charityNavigatorURL\": \"https://www.charitynavigator.org/index.cfm?bay=search.results&cgid=1&cuid=2\"
          },
          \"mission\": \"Home For Life is an expression of a new kind of animal shelter - the long-term animal sanctuary. We provide animals with loving care, a nurturing environment that is safe and stable, a place to belong- a home for life. We provide lifetime care for cats and dogs with special needs who cannot find a home, but who can still lead a quality life. We believe that animals should live in a setting that is appropriately scaled to allow for individual attention and specialized care. This is why Home For Life is able to give its residents a quality life and not just a warehoused existence.\",
          \"streetAddress1\": \"P.O. Box 847\",
          \"streetAddress2\": \"null\",
          \"city\": \"Stillwater\",
          \"stateOrProvince\": \"MN\",
          \"zip\": \"55082\",
          \"phoneNumber\": \"8002525918\",
          \"generalEmail\": \"info@homeforlife.org\",
          \"activeAdvisories\": [
            {
              \"_rapid_links\": {
                \"related\": {
                  \"href\": \"./Advisories/1234\"
                }
              }
            }
          ],
          \"removedAdvisories\": [
            {
              \"_rapid_links\": {
                \"related\": {
                  \"href\": \"./Advisories/1234\"
                }
              }
            }
          ],
          \"currentBoardChair\": {
            \"name\": \"Joseph Carnahan\",
            \"title\": \"Chairman\"
          },
          \"currentCEO\": {
            \"name\": \"Felicia Lozaro\",
            \"title\": \"Executive Director\"
          },
          \"currentRating\": {
            \"_rapid_links\": {
              \"related\": {
                \"href\": \"./ratings/1234\"
              }
            },
            \"score\": 73.1,
            \"rating\": 1,
            \"ratingImage\": \"http://charityNavigator.org/images/1star.png\"
          }
        }
    ]]></string>
</resources>
