<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_item"
            android:icon="@drawable/ic_one"
            android:title="@string/navigation_drawer_profile" />
        <item
            android:id="@+id/donation_history_item"
            android:icon="@drawable/ic_two"
            android:title="@string/navigation_drawer_donation_history" />
        <item
            android:id="@+id/notification_item"
            android:icon="@drawable/ic_three"
            android:title="@string/navigation_drawer_notifications" />
        <item
            android:id="@+id/sign_out_item"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>