<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/una_orange_3"
    tools:context=".CharityLoginActivity">

    <EditText
        android:id="@+id/etCharityName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_xl_padding"
        android:layout_marginLeft="@dimen/medium_xl_padding"
        android:layout_marginEnd="@dimen/medium_xl_padding"
        android:layout_marginRight="@dimen/medium_xl_padding"
        android:layout_marginBottom="@dimen/medium_small_padding"
        android:ems="10"
        android:hint="@string/your_charity_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCharityEin"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etCharityEin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_xl_padding"
        android:layout_marginLeft="@dimen/medium_xl_padding"
        android:layout_marginEnd="@dimen/medium_xl_padding"
        android:layout_marginRight="@dimen/medium_xl_padding"
        android:layout_marginBottom="@dimen/medium_small_padding"
        android:ems="10"
        android:hint="@string/your_charity_ein"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/etCharityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_xl_padding"
        android:layout_marginLeft="@dimen/medium_xl_padding"
        android:layout_marginEnd="@dimen/medium_xl_padding"
        android:layout_marginRight="@dimen/medium_xl_padding"
        android:layout_marginBottom="@dimen/medium_large_padding"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCharityName" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/charity_signup_explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_small_padding"
        android:layout_marginLeft="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginRight="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/lowercase_app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font_size"
        app:layout_constraintBottom_toTopOf="@+id/etCharityEin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>